--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ wp-content/themes/twentythirteen/*
 wp-content/themes/twentyfourteen/*
 wp-content/themes/twentyfifteen/*
 wp-content/themes/twentysixteen/*
+wp-content/themes/twentyseventeen/*
 wp-content/themes/*/node_modules/**
 #wp-content/plugins/**
 #wp-content/uploads/**
@@ -32,5 +33,5 @@ wp-settings.php
 wp-signup.php
 wp-trackback.php
 xmlrpc.php
-!wp-content/themes/avery_construction/*
+!wp-content/themes/webx_contractor_single/*
     
