updated node packages to include fontawesome so there's no longer a dependance on a cdn (which may expire at some point)

--- a/wp-content/themes/webx_contractor_single/package.json
+++ b/wp-content/themes/webx_contractor_single/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "font-awesome": "^4.7.0",
     "grunt": "*",
-    "grunt-contrib-concat": "*",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-sass": "*",
     "grunt-contrib-watch": "*"
   }
