--- a/wp-content/themes/webx_contractor_single/package.json
+++ b/wp-content/themes/webx_contractor_single/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "grunt": "*",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "*",
     "grunt-contrib-watch": "*"
   }
