--- a/wp-content/themes/123_parent/package.json
+++ b/wp-content/themes/123_parent/package.json
@@ -13,7 +13,9 @@
     "grunt": "*",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-sass": "*",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "*"
   }
 }
