--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ wp-signup.php
 wp-trackback.php
 xmlrpc.php
 !wp-content/themes/123_parent/*
-    
+wp-content/themes/123_parent/build/css/custom.css
