changed logo-text.png to not be tracked by git

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ wp-trackback.php
 xmlrpc.php
 !wp-content/themes/123_parent/*
 wp-content/themes/123_parent/build/css/custom.css
+wp-content/themes/123_parent/library/img/logo-text.png
