--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ wp-signup.php
 wp-trackback.php
 xmlrpc.php
 !wp-content/themes/123_parent/*
-wp-content/themes/123_parent/build/css/custom.css
 wp-content/themes/123_parent/library/img/logo-text.png
+wp-content/themes/123_parent/build/css/custom/*
+!wp-content/themes/123_parent/build/css/custom/.preserve
