--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ wp-trackback.php
 xmlrpc.php
 !wp-content/themes/123_parent/*
 wp-content/themes/123_parent/library/img/logo-text.png
-wp-content/themes/123_parent/build/css/custom/*
+wp-content/themes/123_parent/build/css/custom/**
 !wp-content/themes/123_parent/build/css/custom/.preserve
